--- a/.github/actions/python-checks/action.yml
+++ b/.github/actions/python-checks/action.yml
@@ -2,6 +2,10 @@ name: 'Python SDK Checks'
 description: 'Run Python SDK tests and validate generated types using shared script logic'
 
 inputs:
+  python-version:
+    description: 'Python version to test with'
+    required: false
+    default: '3.13'
   uv-version:
     description: 'uv version to install'
     required: false
@@ -16,9 +20,9 @@ runs:
         version: ${{ inputs.uv-version }}
         enable-cache: true
 
-    - name: Set up Python
+    - name: Set up Python ${{ inputs.python-version }}
       shell: bash
-      run: uv python install
+      run: uv python install ${{ inputs.python-version }}
       working-directory: sdks/python
 
     - name: Install HTTP optional dependencies
