feat: Add schema field to flow
This provides a way to manage future incompatible schema changes as well
as identifying flow YAML files by inspecting the contents. This solves
problems with tests failing due to non-flow YAML files failing to parse.

--- a/examples/data-pipeline/debug-pipeline.yaml
+++ b/examples/data-pipeline/debug-pipeline.yaml
@@ -1,3 +1,4 @@
+schema: https://stepflow.org/schemas/v1/flow.json
 name: "Sales Analysis Pipeline (Metrics)"
 description: "Processes sales data and calculates business metrics"
 
