--- a/examples/basic/workflow.yaml
+++ b/examples/basic/workflow.yaml
@@ -1,3 +1,4 @@
+schema: https://stepflow.org/schemas/v1/flow.json
 name: "Basic Math Operations"
 description: "Demonstrates basic mathematical operations using UDFs"
 
