--- a/examples/custom-python-components/workflow.yaml
+++ b/examples/custom-python-components/workflow.yaml
@@ -1,3 +1,4 @@
+schema: https://stepflow.org/schemas/v1/flow.json
 name: "Customer Business Intelligence Pipeline"
 description: "Demonstrates custom Python components for business logic"
 
