--- a/examples/loop-components/map_example.yaml
+++ b/examples/loop-components/map_example.yaml
@@ -1,3 +1,4 @@
+schema: https://stepflow.org/schemas/v1/flow.json
 name: "Map Example"
 description: "Example of using the Python map component with doubling workflow"
 
