--- a/tests/no_tests.yaml
+++ b/tests/no_tests.yaml
@@ -1,3 +1,4 @@
+schema: https://stepflow.org/schemas/v1/flow.json
 name: Workflow Without Tests
 description: This workflow has no test section and should be skipped
 
