--- a/examples/eval/math-eval.yaml
+++ b/examples/eval/math-eval.yaml
@@ -9,10 +9,10 @@ input_schema:
       type: array
 
 steps:
-  - id: nested_math
-    component: /builtin/eval
+  - id: create_nested_flow
+    component: /builtin/put_blob
     input:
-      workflow:
+      data:
         $literal:
           schema: https://stepflow.org/schemas/v1/flow.json
           name: "Nested Math Workflow"
@@ -29,6 +29,7 @@ steps:
                         b: { type: integer }
                       required: [a, b]
                     code: "input['a'] + input['b']"
+                blob_type: "data"
 
             - id: compute_sum
               component: "/python/udf"
@@ -39,6 +40,12 @@ steps:
                   b: { $from: { workflow: input }, path: "y" }
           output:
             sum_result: { $from: { step: compute_sum } }
+      blob_type: "flow"
+
+  - id: nested_math
+    component: /builtin/eval
+    input:
+      flow_id: { $from: { step: create_nested_flow }, path: "blob_id" }
       input:
         x: 5
         y: 3
