--- a/examples/langchain/stepflow-config.yml
+++ b/examples/langchain/stepflow-config.yml
@@ -1,6 +1,11 @@
 plugins:
   builtin:
     type: builtin
+  python:
+    type: stepflow
+    transport: stdio
+    command: uv
+    args: ["--project", "../../sdks/python", "run", "stepflow_py"]
   langchain:
     type: stepflow
     transport: stdio
@@ -10,7 +15,12 @@ plugins:
       PYTHONPATH: "${PYTHONPATH:-}:../../sdks/python/src"
 
 routes:
-  # Route all components to the langchain plugin first, then fallback to builtin
+  # Route builtin components directly to builtin plugin
+  "/builtin/{*component}":
+    - plugin: builtin
+  "/python/{*component}":
+    - plugin: python
+  # Route all other components to langchain plugin first, then fallback to builtin
   "/{*component}":
     - plugin: langchain
     - plugin: builtin
