--- a/stepflow-ui/package.json
+++ b/stepflow-ui/package.json
@@ -35,11 +35,13 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-query-devtools": "^5.80.6",
+    "@types/js-yaml": "^4.0.9",
     "@xyflow/react": "^12.7.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "elkjs": "^0.10.0",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "react": "^19.0.0",
