feat: Simplify UDFs using named functions
Rather than a special `function_name` field which needs to be set,
UDFs can now define a function that is referenced by name.

--- a/tests/python/blob_integration.yaml
+++ b/tests/python/blob_integration.yaml
@@ -59,7 +59,7 @@ steps:
                   'processed_blob_id': new_blob_id,
                   'summary': f'Processed {len(original_data)} fields'
               }
-        function_name: process_data
+          process_data
       blob_type: "data"
 
   # Step 3: Python UDF retrieves blob and processes it
