docs: Update the CLI documentation
This uses `clap-markdown` to generate documentation for each command.
If we find we need to, we should be able to customize the generated
markdown further by implementing the same logic (it is a relatively
simple transformation of the Clap command structure).

--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -49,6 +49,7 @@ uuid.workspace = true
 [dev-dependencies]
 insta-cmd.workspace = true
 tempfile.workspace = true
+clap-markdown = "0.1.4"
 
 [[bin]]
 name = "stepflow"
