--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -4,7 +4,7 @@ edition = "2024"
 version = "0.2.2"
 license = "Apache-2.0"
 homepage = "https://fuzzy-journey-4j3y1we.pages.github.io/"
-repository = "https://github.com/riptano/stepflow"
+repository = "https://github.com/stepflow-ai/stepflow"
 
 [workspace]
 resolver = "2"
