--- a/examples/data-pipeline/pipeline.yaml
+++ b/examples/data-pipeline/pipeline.yaml
@@ -15,7 +15,7 @@ input_schema:
 steps:
   # Parallel data processing steps
   - id: sum_revenue_udf
-    component: /builtin/put_blob
+    component: /put_blob
     input:
       data:
         $literal:
@@ -30,7 +30,7 @@ steps:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: count_sales_udf
-    component: /builtin/put_blob
+    component: /put_blob
     input:
       data:
         $literal:
@@ -45,7 +45,7 @@ steps:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: average_sale_udf
-    component: /builtin/put_blob
+    component: /put_blob
     input:
       data:
         $literal:
@@ -61,7 +61,7 @@ steps:
 
   # This step waits for total_revenue to complete
   - id: divide_udf
-    component: /builtin/put_blob
+    component: /put_blob
     input:
       data:
         $literal:
@@ -78,7 +78,7 @@ steps:
 
   # Regional analysis using eval components (run in parallel)
   - id: analyze_west_region
-    component: /builtin/eval
+    component: /eval
     input:
       workflow:
         $literal:
@@ -86,7 +86,7 @@ steps:
           name: "West Region Analysis"
           steps:
             - id: filter_west_udf
-              component: /builtin/put_blob
+              component: /put_blob
               input:
                 data:
                   $literal:
@@ -100,7 +100,7 @@ steps:
                   sales_data: { $from: { workflow: input }, path: "sales_data" }
 
             - id: west_revenue_udf
-              component: /builtin/put_blob
+              component: /put_blob
               input:
                 data:
                   $literal:
@@ -114,7 +114,7 @@ steps:
                   filtered_data: { $from: { step: filter_region }, path: "result" }
 
             - id: west_count_udf
-              component: /builtin/put_blob
+              component: /put_blob
               input:
                 data:
                   $literal:
@@ -135,7 +135,7 @@ steps:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: analyze_east_region
-    component: /builtin/eval
+    component: /eval
     input:
       workflow:
         $literal:
@@ -143,7 +143,7 @@ steps:
           name: "East Region Analysis"
           steps:
             - id: filter_east_udf
-              component: /builtin/put_blob
+              component: /put_blob
               input:
                 data:
                   $literal:
@@ -157,7 +157,7 @@ steps:
                   sales_data: { $from: { workflow: input }, path: "sales_data" }
 
             - id: east_revenue_udf
-              component: /builtin/put_blob
+              component: /put_blob
               input:
                 data:
                   $literal:
@@ -171,7 +171,7 @@ steps:
                   filtered_data: { $from: { step: filter_region }, path: "result" }
 
             - id: east_count_udf
-              component: /builtin/put_blob
+              component: /put_blob
               input:
                 data:
                   $literal:
@@ -193,7 +193,7 @@ steps:
 
   # Compare regional performance
   - id: compare_regions_udf
-    component: /builtin/put_blob
+    component: /put_blob
     input:
       data:
         $literal:
@@ -223,7 +223,7 @@ steps:
 
   # Format metrics for AI analysis (waits for all calculations)
   - id: format_metrics_udf
-    component: /builtin/put_blob
+    component: /put_blob
     input:
       data:
         $literal:
@@ -258,14 +258,14 @@ steps:
 
   # Format messages for OpenAI (depends on metrics summary)
   - id: create_openai_messages
-    component: /builtin/create_messages
+    component: /create_messages
     input:
       system_instructions: "You are a senior sales analyst providing insights based on business metrics and regional performance. Be specific and actionable in your recommendations."
       user_prompt: { $from: { step: format_metrics_summary }, path: "summary" }
 
   # Generate AI insights from the comprehensive metrics
   - id: generate_ai_insights
-    component: /builtin/openai
+    component: /openai
     input:
       messages: { $from: { step: create_openai_messages }, path: "messages" }
 
