--- a/examples/custom-python-components/workflow.yaml
+++ b/examples/custom-python-components/workflow.yaml
@@ -41,7 +41,7 @@ steps:
       report_title: "Q4 Customer Analysis Report"
 
   - id: retrieve_report
-    component: "/builtin/get_blob"
+    component: "/get_blob"
     input:
       blob_id: { $from: { step: generate_business_report }, path: "report_blob_id" }
 
