chore: enum, strum, fmt

--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -46,6 +46,7 @@ tracing-subscriber.workspace = true
 url.workspace = true
 uuid.workspace = true
 dot.workspace = true
+strum.workspace = true
 
 [dev-dependencies]
 insta-cmd.workspace = true
