--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -25,7 +25,7 @@ glob = "0.3"
 matchit = "0.8.4"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
-insta = { version = "1.34.0", features = ["glob", "yaml" ] }
+insta = { version = "1.34.0", features = ["glob", "yaml", "filters" ] }
 insta-cmd = "0.6.0"
 nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
