--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -48,9 +48,11 @@ uuid.workspace = true
 strum.workspace = true
 
 [dev-dependencies]
-insta-cmd.workspace = true
-tempfile.workspace = true
 clap-markdown = "0.1.4"
+insta.workspace = true
+insta-cmd.workspace = true
+regex.workspace = true
+tempfile.workspace = true
 
 [[bin]]
 name = "stepflow"
