chore: use which to locate dot

--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -46,6 +46,7 @@ tracing-subscriber.workspace = true
 url.workspace = true
 uuid.workspace = true
 strum.workspace = true
+which.workspace = true
 
 [dev-dependencies]
 clap-markdown = "0.1.4"
