--- a/.github/actions/rust-checks/action.yml
+++ b/.github/actions/rust-checks/action.yml
@@ -59,6 +59,13 @@ runs:
       with:
         tool: cargo-deny,cargo-machete
 
+    # Install Graphviz for visualize command tests
+    - name: Install Graphviz
+      shell: bash
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y graphviz
+
     # Install UV and Python for HTTP integration tests
     - name: Install uv
       uses: astral-sh/setup-uv@v5
